--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,17 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "start.js",
+  "main": "index.js",
   "scripts": {
-    "build": "node start.js 80",
-    "test": "node start.js 8080"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"next dev"
   },
   "keywords": [],
   "author": "Daniel Fazzioni, Arthur Matos",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "next": "^12.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
