--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "server",
+  "name": "heart-failure-prediction",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Fazzioni/Heart-Failure-Prediction.git"
   },
   "keywords": [],
-  "author": "Daniel Fazzioni, Arthur Matos",
+  "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Fazzioni/Heart-Failure-Prediction/issues"
+  },
+  "homepage": "https://github.com/Fazzioni/Heart-Failure-Prediction#readme",
   "dependencies": {
-    "next": "^12.2.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "express": "^4.18.1"
   }
 }
